[package]
name = "cosmosindexer"
version = "0.1.0"
edition = "2021"
author= "protocolwhisper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = { version = "0.15.0", features = ["rpc"] }
futures = "0.3.30"
jsonpath-rust = "0.4.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.113"
tendermint = "0.34.0"
tendermint-rpc = { version = "0.34.0" , features = ["http-client" , "websocket-client"] }
tokio = { version = "1", features = ["full"] }
